# c-pong-raylib

./: CMakeLists.txt  build.bat  run.bat
resources/models/: player.mtl
src/: camera.c  camera.h  entity.c  entity.h  game.c  game.h  main.c
